All technologies route fixed, font fix, vertical align fix, tech-tab hovering fix

--- a/public/css/index1911.css
+++ b/public/css/index1911.css
@@ -13308,32 +13308,28 @@ strong {
   height: 60px;
   padding-left: 0px;
   border: 1px solid #ddd;
-  border: 1px solid rgba(86,61,124,.2);
+  display: table;
 }
 .my-box{
-  padding: 10px;
   padding-left: 10px;
   height: inherit;
   text-transform: uppercase;
   text-align: center;
-  font-weight: bold;
+  font-family: 'Helvetica Neue LT Std';
+  font-weight:100;
   color: #000;
+  display: table-cell;
+  vertical-align: middle;
 }
 .my-box:hover{
   color: #000;
   font-weight: bold;
   text-decoration: none;
-  border-right: 1px solid #ddd;
-  border-right: 1px solid rgba(86,61,124,.2);
   border-top: 3px solid #d31f26;
-  border-bottom: 2px solid #fff;
 }
 .my-box:focus{
   color: #000;
   font-weight: bold;
   text-decoration: none;
-  border-right: 1px solid #ddd;
-  border-right: 1px solid rgba(86,61,124,.2);
   border-top: 3px solid #d31f26;
-  border-bottom: 2px solid #fff;
 }
